feat: add tracking

--- a/index.html
+++ b/index.html
@@ -41,5 +41,18 @@ margin-bottom: 1em;
 
 <iframe src="https://anchor.fm/next-doing-done/embed" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
 </div>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115014635-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag() {
+  dataLayer.push(arguments);
+}
+gtag("js", new Date());
+
+gtag("config", "UA-115014635-1");
+</script>
+
+
 </body>
 </html>
