--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ margin-bottom: 1em;
 <div class="content">
   <h1> Next Doing Done ist ein Podcast über agiles Arbeiten. </h1>
 
-  von <a href="https://twitter.com/tarekgarir">Tarek</a> und <a href="https://twitter.com/lassediercks"> Lasse</a>
+  von <a href="https://twitter.com/tarekgarir">Tarek</a> und <a href="https://lassediercks.de/"> Lasse</a>
 <br />
 <a class="mail-link" href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</a>
 
