--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ margin-bottom: 1em;
 </style>
 <body>
 <div class="content">
-  <h1> Next Doing Done ist ein Podcast über agiles Arbeiten. </h1>
+  <h1>Next Doing Done</h1>
+  <h2>Der Podcast rund ums agiles Mindset, persönliche Herausforderungen und Spaß am Leben.</h2>
 
   von <a href="https://twitter.com/tarekgarir">Tarek</a> und <a href="https://lassediercks.de/"> Lasse</a>
 <br />
