--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <style>
 body{
 font-family: sans-serif;
-background: #065A8A;
+background: url('./Rectangle.png');
+background-size: cover;
+background-position: center center;
 color: white;
 display: flex;
 height: 100vh;
@@ -25,23 +27,35 @@ padding: 1em;
 a {
 font-weight: 900;
 color: inherit;}
-.mail-link{
-display: block;
-margin-bottom: 1em;
+
+
+op-frame{
+  --copy-color: white;
+  --main-color: #f5ee9e;
+  --bg-color: transparent;
+
 }
 
 </style>
 <body>
-<div class="content">
-  <h1>Next Doing Done</h1>
-  <h2>Der Podcast rund ums agiles Mindset, persönliche Herausforderungen und Spaß am Leben.</h2>
+  <op-frame>
 
-  von <a href="https://twitter.com/tarekgarir">Tarek</a> und <a href="https://lassediercks.de/"> Lasse</a>
+<op-content>
+  <op-headline>Next Doing Done</op-headline>
+  <op-paragraph>Der Podcast rund ums agile Mindset, persönliche Herausforderungen und Spaß am Leben.</op-paragraph>
+
+  von <op-link href="https://twitter.com/tarekgarir">Tarek</op-link> und <op-link href="https://lassediercks.de/"> Lasse</op-link>
 <br />
-<a class="mail-link" href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</a>
-
-<iframe src="https://anchor.fm/next-doing-done/embed" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-</div>
+<op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link>
+<br>
+<br>
+<br>
+<br>
+<iframe src="https://anchor.fm/next-doing-done/embed" height="102px" style="max-width: 400px;" width="100%" frameborder="0" scrolling="no"></iframe>
+<br>
+<op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
+</op-content>
+</op-frame>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115014635-1"></script>
 <script>
@@ -53,6 +67,7 @@ gtag("js", new Date());
 
 gtag("config", "UA-115014635-1");
 </script>
+<script src="https://lib.patternson.io/start/v/latest.js"></script>
 
 
 </body>
