feat: update octopus and remove bg image

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <style>
 body{
 font-family: sans-serif;
-background: url('./Rectangle.png');
 background-size: cover;
 background-position: center center;
-color: white;
 display: flex;
 height: 100vh;
 padding: 0;
@@ -30,8 +28,7 @@ color: inherit;}
 
 
 op-frame{
-  --copy-color: white;
-  --main-color: #f5ee9e;
+  --main-color: #3772FF;
   --bg-color: transparent;
 
 }
@@ -46,7 +43,8 @@ op-frame{
 
   von <op-link href="https://twitter.com/tarekgarir">Tarek</op-link> und <op-link href="https://lassediercks.de/"> Lasse</op-link>
 <br />
-<op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link>
+<br>
+Schreib uns gerne was wir besser machen können an <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link>
 <br>
 <br>
 <br>
@@ -67,7 +65,7 @@ gtag("js", new Date());
 
 gtag("config", "UA-115014635-1");
 </script>
-<script src="https://lib.patternson.io/start/v/latest.js"></script>
+<script src="https://lib.patternson.io/Octopus/v/latest.js"></script>
 
 
 </body>
