feat: give anchor player max width

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Schreib uns gerne was wir besser machen können an <op-link href="mailto:feedbac
 <br>
 <br>
 <br>
-<iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0" scrolling="no"></iframe>
 <br>
 <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
 </op-content>
