matched content with social media descriptions

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ color: inherit;}
 
 op-frame{
   --main-color: #3772FF;
+  --secondary-color: #61E294;
   --bg-color: transparent;
+  --copy-color: #0F0A0A;
 
 }
 
@@ -39,16 +41,15 @@ op-frame{
 
 <op-content>
   <op-headline>Next Doing Done</op-headline>
-  <op-paragraph>Der Podcast rund ums agile Mindset, persönliche Herausforderungen und Spaß am Leben.</op-paragraph>
-
-  von <op-link href="https://twitter.com/tarekgarir">Tarek</op-link> und <op-link href="https://lassediercks.de/"> Lasse</op-link>
+  <op-paragraph>Next Doing Done ist der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären dir, wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst. Zwischendurch erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach nur rum.<br><br>Deine Fragen und Anregungen kannst du uns gerne an <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link> schicken ❤️<br><br>➡️ Folge uns auf Instagram <op-link href="https://instagram.com/nextdoingdone">@nextdoingdone</op-link>
+oder<br>
+➡️ Schreib uns direkt auf Twitter <op-link href="https://lassediercks.de/"> @lassediercks</op-link> und <op-link href="https://twitter.com/tarekgarir">@TarekGarir</op-link>
 <br />
 <br>
-Schreib uns gerne was wir besser machen können an <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link>
+Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
 <br>
 <br>
-<br>
-<br>
+<op-label>Unsere aktuelle Folge</op-label>
 <iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0" scrolling="no"></iframe>
 <br>
 <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
