--- a/index.html
+++ b/index.html
@@ -39,21 +39,22 @@ op-frame{
 <body>
   <op-frame>
 
-<op-content>
-  <op-headline>Next Doing Done</op-headline>
-  <op-paragraph>Next Doing Done ist der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären dir, wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst. Zwischendurch erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach nur rum.<br><br>Deine Fragen und Anregungen kannst du uns gerne an <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link> schicken ❤️<br><br>➡️ Folge uns auf Instagram <op-link href="https://instagram.com/nextdoingdone">@nextdoingdone</op-link>
-oder<br>
-➡️ Schreib uns direkt auf Twitter <op-link href="https://lassediercks.de/"> @lassediercks</op-link> und <op-link href="https://twitter.com/tarekgarir">@TarekGarir</op-link>
-<br />
-<br>
-Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
-<br>
-<br>
-<op-label>Unsere aktuelle Folge</op-label>
-<iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0" scrolling="no"></iframe>
-<br>
-<op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
-</op-content>
+  <op-content>
+    <op-headline>Next Doing Done</op-headline>
+    <op-paragraph>Next Doing Done ist der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären dir, wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst. Zwischendurch erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach nur rum.<br><br>Deine Fragen und Anregungen kannst du uns gerne an <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link> schicken ❤️<br><br>➡️ Folge uns auf Instagram <op-link href="https://instagram.com/nextdoingdone">@nextdoingdone</op-link>
+    oder<br>
+    ➡️ Schreib uns direkt auf Twitter <op-link href="https://lassediercks.de/"> @lassediercks</op-link> und <op-link href="https://twitter.com/tarekgarir">@TarekGarir</op-link>
+    <br>
+    <br>
+    Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
+    <br>
+    <br>
+    </op-paragraph> 
+    <op-label>Unsere aktuelle Folge</op-label>
+    <iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0" scrolling="no"></iframe>
+    <br>
+    <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
+  </op-content>
 </op-frame>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115014635-1"></script>
