fix: dont cut layout on small height devices

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ font-family: sans-serif;
 background-size: cover;
 background-position: center center;
 display: flex;
-height: 100vh;
+min-height: 100vh;
 padding: 0;
 margin: 0;
 align-items: center;
