fix: headline level 2 for latest episode

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ op-frame{
     Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
     <br>
     <br>
-    </op-paragraph> 
-    <op-label>Unsere aktuelle Folge</op-label>
+    </op-paragraph>
+    <op-headline level=2>Unsere aktuelle Folge</op-headline level=2>
     <iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0" scrolling="no"></iframe>
     <br>
     <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
