feat: add open graph and twitter card

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#61E294">
+  <meta name="robots" content="index, follow">
+
+
+  <link rel="canonical" href="https://www.nextdoingdone.de">
+
+
   <title>Next Doing Done</title>
+  <meta property="og:site_name" content="Next Doing Done"/>
+  <meta property="og:title" content="Next Doing Done"/>
+
+
+  <meta name="description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben.">
+  <meta property="og:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."/>
+  <meta property="og:email" content="feedback@nextdoingdone.de"/>
+  <meta property="og:url" content="https://nextdoingdone.de/">
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@nextdoingdone" />
+  <meta name="twitter:title" content="Next Doing Done" />
+  <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben." />
+
 </head>
 <style>
 body{
