--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <title>Next Doing Done</title>
   <meta property="og:site_name" content="Next Doing Done"/>
   <meta property="og:title" content="Next Doing Done"/>
-
+  <meta property="og:image" content="https://nextdoingdone.de/img/open-graph.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/png">
 
   <meta name="description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben.">
   <meta property="og:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."/>
@@ -24,6 +27,9 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@nextdoingdone" />
   <meta name="twitter:title" content="Next Doing Done" />
+  <meta name="twitter:image:width" content="750" />
+  <meta name="twitter:image:height" content="560" />
+  <meta name="twitter:image" content="https://nextdoingdone.de/img/twitter.png" />
   <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben." />
 
 </head>
