--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="twitter:image" content="https://nextdoingdone.de/img/twitter.png" />
   <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben." />
 
- <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
+ <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png?1">
 
 </head>
 <style>
