--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +13,17 @@
 
 
   <title>Next Doing Done</title>
-  <meta property="og:site_name" content="Next Doing Done"/>
-  <meta property="og:title" content="Next Doing Done"/>
+  <meta property="og:site_name" content="Next Doing Done" />
+  <meta property="og:title" content="Next Doing Done" />
   <meta property="og:image" content="https://nextdoingdone.de/img/open-graph.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:type" content="image/png">
 
   <meta name="description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben.">
-  <meta property="og:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."/>
-  <meta property="og:email" content="feedback@nextdoingdone.de"/>
+  <meta property="og:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."
+  />
+  <meta property="og:email" content="feedback@nextdoingdone.de" />
   <meta property="og:url" content="https://nextdoingdone.de/">
 
   <meta name="twitter:card" content="summary" />
@@ -30,74 +32,91 @@
   <meta name="twitter:image:width" content="750" />
   <meta name="twitter:image:height" content="560" />
   <meta name="twitter:image" content="https://nextdoingdone.de/img/twitter.png" />
-  <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben." />
+  <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."
+  />
 
- <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png?1">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png?1">
 
 </head>
 <style>
-body{
-font-family: sans-serif;
-background-size: cover;
-background-position: center center;
-display: flex;
-min-height: 100vh;
-padding: 0;
-margin: 0;
-align-items: center;
-justify-content: center;
-}
-.content{
-max-width: 30em;
-padding: 1em;
-}
-a {
-font-weight: 900;
-color: inherit;}
+  body {
+    font-family: sans-serif;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .content {
+    max-width: 30em;
+    padding: 1em;
+  }
+
+  a {
+    font-weight: 900;
+    color: inherit;
+  }
 
 
-op-frame{
-  --main-color: #3772FF;
-  --secondary-color: #61E294;
-  --bg-color: transparent;
-  --copy-color: #0F0A0A;
+  op-frame {
+    --main-color: #3772FF;
+    --secondary-color: #61E294;
+    --bg-color: transparent;
+    --copy-color: #0F0A0A;
 
-}
-
+  }
 </style>
+
 <body>
   <op-frame>
 
-  <op-content>
-    <op-headline>Next Doing Done</op-headline>
-    <op-paragraph>Next Doing Done ist der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären dir, wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst. Zwischendurch erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach nur rum.<br><br>Deine Fragen und Anregungen kannst du uns gerne an <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link> schicken ❤️<br><br>➡️ Folge uns auf Instagram <op-link href="https://instagram.com/nextdoingdone">@nextdoingdone</op-link>
-    oder<br>
-    ➡️ Schreib uns direkt auf Twitter <op-link href="https://lassediercks.de/"> @lassediercks</op-link> und <op-link href="https://twitter.com/tarekgarir">@TarekGarir</op-link>
-    <br>
-    <br>
-    Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
-    <br>
-    <br>
-    </op-paragraph>
-    <op-headline level=2>Unsere aktuelle Folge</op-headline level=2>
-    <iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0" scrolling="no"></iframe>
-    <br>
-    <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
-  </op-content>
-</op-frame>
+    <op-content>
+      <op-headline>Next Doing Done</op-headline>
+      <op-paragraph>Next Doing Done ist der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären
+        dir, wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst. Zwischendurch
+        erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach nur
+        rum.
+        <br>
+        <br>Deine Fragen und Anregungen kannst du uns gerne an
+        <op-link href="mailto:feedback@nextdoingdone.de">feedback@nextdoingdone.de</op-link> schicken ❤️
+        <br>
+        <br>➡️ Folge uns auf Instagram
+        <op-link href="https://instagram.com/nextdoingdone">@nextdoingdone</op-link>
+        oder
+        <br> ➡️ Schreib uns direkt auf Twitter
+        <op-link href="https://lassediercks.de/"> @lassediercks</op-link> und
+        <op-link href="https://twitter.com/tarekgarir">@TarekGarir</op-link>
+        <br>
+        <br> Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
+      <br>
+      <br>
+      </op-paragraph>
+      <op-headline level=2>Unsere aktuelle Folge</op-headline level=2>
+      <iframe src="https://anchor.fm/nextdoingdone/embed" height="102px" width="100%" style="max-width: 400px;" frameborder="0"
+        scrolling="no"></iframe>
+      <br>
+      <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss">Oder zum RSS-Feed</op-link>
+      <img src="./Canvas.pdf" alt="">
+    </op-content>
+  </op-frame>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115014635-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag() {
-  dataLayer.push(arguments);
-}
-gtag("js", new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115014635-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-gtag("config", "UA-115014635-1");
-</script>
-<script src="https://lib.patternson.io/Octopus/v/latest.js"></script>
+    gtag("config", "UA-115014635-1");
+  </script>
+  <script src="https://lib.patternson.io/Octopus/v/latest.js"></script>
 
 
 </body>
+
 </html>
