add verification meta tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="canonical" href="https://www.nextdoingdone.de">
 
-
+  <meta name="google-site-verification" content="yuHd3-0TwWw5A9VGS9HpTZbDCTvOSg10qz8l8Oecx90" />
   <title>Next Doing Done</title>
   <meta property="og:site_name" content="Next Doing Done" />
   <meta property="og:title" content="Next Doing Done" />
