--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="canonical" href="https://www.nextdoingdone.de">
 
   <meta name="google-site-verification" content="yuHd3-0TwWw5A9VGS9HpTZbDCTvOSg10qz8l8Oecx90" />
-  <title>Next Doing Done</title>
+  <title>Next Doing Done | Der Podcast rund ums smarte arbeiten</title>
   <meta property="og:site_name" content="Next Doing Done" />
   <meta property="og:title" content="Next Doing Done" />
   <meta property="og:image" content="https://nextdoingdone.de/img/open-graph.png">
