MANAGER HAT GESPROCHEN

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <img class="logo" src="./img/Logo.svg" alt="Next Doing Done Logo">
     </header>
     <op-content>
-      <op-headline level="2">Hören auf</op-headline>
+      <op-headline level="2">Zu hören auf:</op-headline>
       <div class="listen-on">
 
         <op-link href="https://open.spotify.com/show/3qmlDizuA6y5dK4Dl4LsJs">Spotify</op-link>
