--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <op-link href="https://www.breaker.audio/next-doing-done">Breaker</op-link>
         <op-link href="https://overcast.fm/itunes1354436703/next-doing-done">Overcast</op-link>
         <op-link href="https://play.radiopublic.com/next-doing-done-GE2xqP">Radio Public</op-link>
+        <op-link href="https://www.youtube.com/channel/UC2Imhkol-GXbPT7I-0TDdlQ?view_as=subscriber">Youtube</op-link>
       </div>
       <br>
       <op-headline level="2">Über uns</op-headline>
