feat: update order, remove form

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <meta property="og:image:type" content="image/png">
 
   <meta name="description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben.">
-  <meta property="og:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."
-  />
+  <meta property="og:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben." />
   <meta property="og:email" content="feedback@nextdoingdone.de" />
   <meta property="og:url" content="https://nextdoingdone.de/">
 
@@ -33,8 +32,7 @@
   <meta name="twitter:image:width" content="750" />
   <meta name="twitter:image:height" content="560" />
   <meta name="twitter:image" content="https://nextdoingdone.de/img/twitter.png" />
-  <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben."
-  />
+  <meta name="twitter:description" content="Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben." />
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png?1">
 
@@ -47,31 +45,30 @@
       <img class="logo " src="./img/Logo.svg " alt="Next Doing Done Logo ">
     </header>
     <op-content>
-      <op-headline level="2 ">Probleme im Unternehmen?</op-headline>
-      <op-paragraph>Fass uns kurz deine Situation zusammen und wir werden dir innerhalb von 24 Stunden antworten wie und
-        mit welchen Methoden du deine Probleme angehen kannst.</op-paragraph>
-      <textarea class="problem-text" id="MailText"></textarea>
-      <op-button id="submitButton">Mail Senden</op-button>
-      <op-headline level="2 ">Zu hören auf:</op-headline>
-      <div class="listen-on ">
-        <op-link href="https://open.spotify.com/show/3qmlDizuA6y5dK4Dl4LsJs ">Spotify</op-link>
-        <op-link href="https://itunes.apple.com/de/podcast/next-doing-done/id1354436703?l=en&mt=2 ">Apple Podcasts</op-link>
-        <op-link href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy8yYWI3ZmM4L3BvZGNhc3QvcnNz ">Google
-          Podcasts
-        </op-link>
-        <op-link href="https://castbox.fm/channel/id1190968 ">Castbox</op-link>
-        <op-link href="https://www.podbean.com/podcast-detail/ak883-6783a/Next-Doing-Done-Podcast ">Podbean</op-link>
-        <op-link href="https://www.breaker.audio/next-doing-done ">Breaker</op-link>
-        <op-link href="https://overcast.fm/itunes1354436703/next-doing-done ">Overcast</op-link>
-        <op-link href="https://play.radiopublic.com/next-doing-done-GE2xqP ">Radio Public</op-link>
-        <op-link href="https://www.youtube.com/channel/UC2Imhkol-GXbPT7I-0TDdlQ?view_as=subscriber ">Youtube</op-link>
-      </div>
-      <br>
+
       <op-headline level="2 ">Über uns</op-headline>
-      <op-paragraph>Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären dir,
-        wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst. Zwischendurch
-        erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach nur
+      <op-paragraph>Der Podcast rund ums smarte arbeiten, persönliche Herausforderungen und Spaß am Leben. Wir erklären
+        dir,
+        wie du dich, sowohl privat als auch beruflich, durch iteratives Vorgehen stetig verbessern kannst.
+        Zwischendurch
+        erzählen wir dir von unseren Erfahrungen und was wir daraus gelernt haben. Manchmal spinnen wir auch einfach
+        nur
         rum.
+        <br>
+        <op-headline level="2 ">Zu hören auf:</op-headline>
+        <div class="listen-on ">
+          <op-link href="https://open.spotify.com/show/3qmlDizuA6y5dK4Dl4LsJs ">Spotify</op-link>
+          <op-link href="https://itunes.apple.com/de/podcast/next-doing-done/id1354436703?l=en&mt=2 ">Apple Podcasts</op-link>
+          <op-link href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy8yYWI3ZmM4L3BvZGNhc3QvcnNz ">Google
+            Podcasts
+          </op-link>
+          <op-link href="https://castbox.fm/channel/id1190968 ">Castbox</op-link>
+          <op-link href="https://www.podbean.com/podcast-detail/ak883-6783a/Next-Doing-Done-Podcast ">Podbean</op-link>
+          <op-link href="https://www.breaker.audio/next-doing-done ">Breaker</op-link>
+          <op-link href="https://overcast.fm/itunes1354436703/next-doing-done ">Overcast</op-link>
+          <op-link href="https://play.radiopublic.com/next-doing-done-GE2xqP ">Radio Public</op-link>
+          <op-link href="https://www.youtube.com/channel/UC2Imhkol-GXbPT7I-0TDdlQ?view_as=subscriber ">Youtube</op-link>
+        </div>
         <br>
         <br>Deine Fragen und Anregungen kannst du uns gerne an
         <op-link href=" mailto:feedback@nextdoingdone.de ">feedback@nextdoingdone.de</op-link> schicken ❤️
@@ -83,14 +80,16 @@
         <op-link href="https://lassediercks.de/ "> @lassediercks</op-link> und
         <op-link href="https://twitter.com/tarekgarir ">@TarekGarir</op-link>
         <br>
-        <br> Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.</op-paragraph>
+        <br> Abonniere uns und lass ein paar ⭐️⭐️⭐️⭐️⭐️ da.
+      </op-paragraph>
       <br>
       <br>
       </op-paragraph>
       <br>
       <op-headline level=2>Unsere aktuelle Folge</op-headline level=2>
       <iframe src="https://anchor.fm/nextdoingdone/embed " height="102px " width="100% " style="max-width: 400px;
-          " frameborder="0 " scrolling="no "></iframe>
+          "
+        frameborder="0 " scrolling="no "></iframe>
       <br>
       <op-link href="https://anchor.fm/s/2ab7fc8/podcast/rss ">Oder zum RSS-Feed</op-link>
       <br>
